btnx ChangeLog

2008-01-03	v.0.4.5
	* Allows double-clicking by manually changing a button event type=1. This
	undocumented feature was blocked by the force release property.

2007-12-11	v.0.4.4
	* Fixed "2" file creation bug in init script.

2007-12-10	v.0.4.3
	* Init script stop command uses btnx to kill all processes. Previous
	implementation lead to race conditions between init script and btnx
	processes to read and kill PIDs. Also lead to duplicate btnx processes.
	Fixes bug #175088: https://bugs.launchpad.net/btnx/+bug/175088

2007-12-08	v.0.4.2
	* Fixed PID file bug. kill_pids() closed file descriptor that append_pid()
	required to append the PID of current process. Resulted in duplicate btnx
	processes.

2007-12-05	v.0.4.1
	* Init script fix: do_start() attempts to start btnx with full path and
	on failure, attempts to start it with just the executable name. Necessary
	for different implementations of start_daemon().
	* Init script fix: log_*_msg removed, replaced with echoes
	* Init script fix: checks for existence of event handlers before allowing
	btnx to be started.
	* These should fix the delay during boot that some users have experienced.

2007-11-29	v.0.4.0
	* Compatible with btnx-config 0.4.0
	* Added support for multiple configurations.
	* Allows switching configurations with a button event.
	Restarts itself with the correct configuration.
	* Locks PID file while writing and reading it during start up.
	* Kills all previous btnx processes found in the PID file during start up.
	* Support for "Force immediate button release" setting. Sends an immediate
	button release signal after the button pressed signal. Buttons with this
	option cannot be held down.

2007-11-11	v.0.3.3
	* Init bug fixes.
	* LSB compliant init scripts.
	* Forks to background using daemon() with command line argument -b.
	* Log file output with command line argument -l.
	* Appends PID to PID file.

2007-10-15	v.0.3.2
	* Integrated revoco.
	* Command line argument support.
