@@ -1,5 +1,11 @@
 btnx ChangeLog
 
+2008-02-21  v.0.4.6
+    * Added some more delay after modifier key press. Too short delay caused
+    mouse button keycodes to be registered on some systems before modifier keys.
+    Resulted in combos not working properly.
+    Fixes bug #193262: https://bugs.launchpad.net/btnx/+bug/193262
+
 2008-01-03	v.0.4.5
 	* Allows double-clicking by manually changing a button event type=1. This
 	undocumented feature was blocked by the force release property.
